--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>Im hosted with GitHub Pages.</p>
-</body>
+<html dir="ltr "lang="en-US" class="js no-touch cssanimations csstransitions">
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <link rel="icon" href="http://about.icypress.me/hp-content/cypQbiteheart.png">
+  <title>Cypress Chen</title>
+  <script async= src="//www.google-analytics.com/analytics.js"></script>
+  </head>
+  <body>
+  <p>Hello</p>
+  </body>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-69527732-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 </html>
